--- a/TB_Quest_Game/TB_Quest_Game.csproj
+++ b/TB_Quest_Game/TB_Quest_Game.csproj
@@ -112,7 +112,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Presentation\Images\" />
+    <Folder Include="Presentation\Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
