--- a/TB_Quest_Game/TB_Quest_Game.csproj
+++ b/TB_Quest_Game/TB_Quest_Game.csproj
@@ -62,9 +62,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\GameBusiness.cs" />
+    <Compile Include="Data\GameData.cs" />
     <Compile Include="Models\Character.cs" />
-    <Compile Include="Models\GameObject.cs" />
-    <Compile Include="Models\Npc.cs" />
+    <Compile Include="Models\GameMapCoordinates.cs" />
+    <Compile Include="Models\Location.cs" />
+    <Compile Include="Models\Map.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="Presentation\ViewModels\GameViewModel.cs" />
@@ -111,7 +113,6 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="Presentation\Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
